<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Naitsmania</string>
    <string name="NFCLeader">NFC Leader Page</string>
    <string name="manage_group">Manage Groups</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="homePage">Home</string>
    <string name="profile">Profile</string>
	<string name="welcomeUser">Welcome User!</string>
	<string name="firstText">To start using the application, first you have to </string>
	<string name="secondText">Do you already have one? Do not waste time!</string>
	<string name="thirdText">Here you can create a group! Add some basic informations.</string>
	<string name="firstLink">create a group.</string>
	<string name="secondLink">Start connecting to a screen!</string>
	<string name="groupName">Group Name</string>
	<string name="hintGroup">Max 10 characters</string>
	<string name="password">Password</string>
	<string name="numberGroup">Members</string>
	<string name="two">2</string>
	<string name="buttonCreate">Create</string>
	<string name="displayGroup">Group Information</string>
	<string name="Exit">Exit</string>
	<string name="connectionTitle">Beginning Screen Connection!</string>
	<string name="connectionText">Welcome in the screen connection section. Click on the following button to start the initial configuration.</string>
	<string name="prepare_connection">Preparing the Connection</string>
	<string name="returning">Back</string>
	<string name="sur">Surname</string>
	<string name="name">Name</string>
	<string name="ci">City</string>
	<string name="send">Send</string>
	<string name="done">Done</string>
	<string name="app_id">1395324014056454</string>
	<string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
	<!-- Shared preferences -->
	<string name="groupInfo"></string>
	
	<!--  BluetoothChat -->
	<string name="bluetooth_service">Connect to a device.</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan</string>

    <!-- Options Menu -->
    <string name="connect">Start connection</string>
    <string name="discoverable">Make discoverable</string>
    
    <!-- My Places -->
    <string name="hello">My Places</string>
    <string name="insert">Insert</string>
	<string name="no_places">Currently there are no places maintained</string>
	<string name="menu_insert">Add Place</string>
	<string name="menu_delete">Delete Place</string>
	<string name="place_summary">Place</string>
	<string name="place_description">Delete Place</string>
	<!-- I got the address, description and places a bit mixed up. adress & summary = place -->
	<string name="place_edit_adress">Place</string>
	<string name="place_edit_description">Description</string>
	<string name="place_edit_confirm">Confirm</string>
</resources>
